# regatta-tracker-main

./: .env.example  .gitignore  docker-compose.loadtest.yml  docker-compose.yml  init.sql
config/: rgt-auth.loadtest.config
nginx/: nginx.conf
tests/: .dockerignore  .env.example  Dockerfile.integration  load_test.cpp  meson.build  race_test.cpp  run-integration-tests.sh  startup.config
tests/gpx-files/: regatta_boat_1.gpx  regatta_boat_2.gpx  regatta_boat_3.gpx  regatta_boat_4.gpx  regatta_boat_5.gpx
